--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Airshed Studio</title>
   <meta name="description" content="Website of Airshed Studio">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
